--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="overflow--auto">
       <h1 class="color--skyBlue section__heading--largest">
         <!--Your name goes here -->
-        CLOUD GURU
+        JAMES OCONNOR
       </h1>
 
       <ul class="section--social">
@@ -28,7 +28,7 @@
           <a class="color--skyBlue social"
              title="LinkedIn Profile"
              target="_blank"
-             href="#">
+             href="https://www.linkedin.com/in/jamesoconnor5/">
             <i class="fa fa-linkedin"></i>
           </a>
         </li>
@@ -38,7 +38,7 @@
           <a class="social color--skyBlue"
              title="GitHub Profile"
              target="_blank"
-             href="#">
+             href="https://github.com/Jamesoc23">
             <i class="fa fa-github"></i>
           </a>
         </li>
@@ -49,6 +49,15 @@
              title="Resume"
              href="#">
             <i class="fa fa-file-text"></i>
+          </a>
+        </li>
+
+        <!-- Link to Twitter -->
+        <li class="socialWrapper">
+          <a class="social color--skyBlue"
+              title="Twitter"
+              href="#">
+            <i class="fa fa-twitter"></i>
           </a>
         </li>
       </ul>
